--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/doctor.jpeg" />
+    <link rel="icon" type="image/jpeg" href="public/doctor.jpeg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MediBot</title>
